flux/apps/ai/openclaw/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gateway
  namespace: openclaw
  labels:
    app: openclaw-gateway
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: OrderedReady
  selector:
    matchLabels:
      app: openclaw-gateway
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: openclaw-gateway
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: gateway
          image: ghcr.io/openclaw/openclaw:2026.5.2 # {"$imagepolicy": "flux-system:openclaw-policy"}
          command:
            - node
            - /app/dist/index.js
            - gateway
            - run
          ports:
            - name: gateway
              containerPort: 18789
              protocol: TCP
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: "1"
          volumeMounts:
            - name: openclaw-home
              mountPath: /home/node/.openclaw
            - name: export-share
              mountPath: /export
        - name: code-server
          image: docker.io/linuxserver/code-server:4.117.0 # {"$imagepolicy": "flux-system:code-server-policy"}
          ports:
            - name: https
              containerPort: 8443
              protocol: TCP
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 2Gi
              cpu: "2"
          volumeMounts:
            - name: openclaw-home
              mountPath: /projects
            - name: vscode-config
              mountPath: /config
      restartPolicy: Always
      volumes:
        - name: init-config
          configMap:
            name: init-config
        - name: openclaw-home
          persistentVolumeClaim:
            claimName: openclaw-home
        - name: vscode-config
          persistentVolumeClaim:
            claimName: vscode-config
        - name: export-share
          peristentVolumeClaim:
            claimName: export-share
