flux/apps/ai/openclaw/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw
  namespace: openclaw
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-gateway
  hostnames:
    - openclaw.${GLOBAL_DOMAIN}
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /gateway
      backendRefs:
      - name: gateway
        port: 18789
    - matches:
      - path:
          type: PathPrefix
          value: /vscode
      backendRefs:
      - name: gateway
        port: 8443
